# deployx

./: .gitcli-config.json  .gitignore  CONTRIBUTING.md  DOCSTRING_GUIDE.md  LAUNCH_READINESS_PLAN.md  README.md  deployx.yml  main.py  pyproject.toml
cli/: base.py  commands.py  factory.py
commands/: auth.py  deploy.py  history.py  init.py  init_helpers.py  interactive.py  platform_config.py  rollback.py  status.py
core/: logging.py  models.py  services.py
detectors/: project.py
tests/: run_all_tests.py  test_api_integrations.py  test_full_application.py  test_github_deployment.py  test_netlify_deployment.py  test_phase2_features.py  test_railway_deployment.py  test_render_deployment.py  test_vercel_deployment.py
utils/: build.py  config.py  env_manager.py  validator.py
