[project]
name = "deployx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "gitpython>=3.1.45",
    "pygithub>=2.8.1",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "ruff>=0.14.1",
]
